remove hosts file usage

--- a/kube.tf.example
+++ b/kube.tf.example
@@ -68,6 +68,8 @@ module "hcloud-k3s" {
       name              = "worker"
       server_type       = "cx21"
       private_interface = "ens10"
+      # You can use next optional attribute to define the range private IP index for the nodepool. It allows to move items in the list without breaking the IP range.
+      private_ip_index  = 0
       # The number of nodes in this pool. The main parameter for autoscaling.
       count = 3
       # No taint, can accept any workloads.
@@ -78,6 +80,7 @@ module "hcloud-k3s" {
       name              = "data"
       server_type       = "cx31"
       private_interface = "ens10"
+      private_ip_index  = 1
       count             = 1
       taints = [
         "node-role.kubernetes.io/data:NoSchedule"
