add tls san support

--- a/kube.tf.example
+++ b/kube.tf.example
@@ -44,6 +44,9 @@ module "hcloud-k3s" {
   # Use stable (production usage) or latest (staging usage).
   k3s_channel = "stable"
 
+  # Additional TLS-SANs for kube-api server.
+  # tls_sans = ["cp.cluster.my.org"]
+
   # Disable included k3s traefik ingress controller.
   disabled_components = ["traefik"]
   # All advanced parameters for each kubelet, see https://kubernetes.io/docs/reference/command-line-tools-reference/kubelet/.
