--- a/kube.tf.example
+++ b/kube.tf.example
@@ -65,11 +65,12 @@ module "hcloud_k3s" {
     server_type = "cx21"
     # In hetzner, private_interface is the interface name for private network, ens10 is the default one for intel nics, enp7s0 for amd nics.
     private_interface = "ens10"
-    # The number of control planes. For proper HA, use an odd number, 1, 3, 5, etc. Note as the 1st control plane will be the default bastion server, and will be used as main entry for any SSH access to any nodes.
+    # The number of control planes. For HA with etcd, use an odd number, 1, 3, 5, etc. Note as the 1st control plane will be the default bastion server, and will be used as main entry for any SSH access to any nodes.
     count = 1
+    labels = []
     # Use taints to prevent pods to be scheduled on control planes.
     taints = [
-      "node-role.kubernetes.io/master:NoSchedule"
+      "node-role.kubernetes.io/control-plane:NoSchedule"
     ]
   }
 
@@ -84,21 +85,25 @@ module "hcloud_k3s" {
       private_ip_index  = 0
       # The number of nodes in this pool. The main parameter for autoscaling.
       count             = 3
+      labels            = []
       # No taint, can accept any workloads.
       taints            = []
-      # Volume can be optionally set if need a volume on each node of this pool
-      volume_size       = 20
     },
     {
       # Here is an example of a nodepool with a different server type, and a taint. Typically used for database oriented nodes.
-      name              = "data"
-      server_type       = "cx31"
+      name              = "storage"
+      server_type       = "cx21"
       private_interface = "ens10"
       private_ip_index  = 1
       count             = 1
-      taints = [
-        "node-role.kubernetes.io/data:NoSchedule"
+      labels = [
+        "node-role.kubernetes.io/storage=true"
       ]
+      taints = [
+        "node-role.kubernetes.io/storage:NoSchedule"
+      ]
+      # Set a volume size in GB (at least 10) if need a block volume on each node of this pool
+      volume_size       = 20
     }
   ]
 
