--- a/kube.tf.example
+++ b/kube.tf.example
@@ -146,21 +146,21 @@ module "hcloud_k3s" {
 #
 
 resource "hcloud_load_balancer_service" "ssh_service" {
-  load_balancer_id = module.hcloud_k3s.lb_ids.worker
+  load_balancer_id = module.hcloud_k3s.lbs.worker.id
   protocol         = "tcp"
   listen_port      = 22
   destination_port = 22
 }
 
 resource "hcloud_load_balancer_service" "http_service" {
-  load_balancer_id = module.hcloud_k3s.lb_ids.worker
+  load_balancer_id = module.hcloud_k3s.lbs.worker.id
   protocol         = "tcp"
   listen_port      = 80
   destination_port = 80
 }
 
 resource "hcloud_load_balancer_service" "https_service" {
-  load_balancer_id = module.hcloud_k3s.lb_ids.worker
+  load_balancer_id = module.hcloud_k3s.lbs.worker.id
   protocol         = "tcp"
   listen_port      = 443
   destination_port = 443
@@ -178,7 +178,7 @@ resource "hcloud_load_balancer_service" "https_service" {
 # }
 
 # resource "hcloud_load_balancer_service" "https_service" {
-#   load_balancer_id = module.hcloud_k3s.lb_ids.worker
+#   load_balancer_id = module.hcloud_k3s.lbs.worker.id
 #   protocol         = "https"
 #   listen_port      = 443
 #   destination_port = 80
@@ -204,7 +204,7 @@ resource "hcloud_load_balancer_service" "https_service" {
 #
 
 # resource "hcloud_load_balancer_service" "kube_service" {
-#   load_balancer_id = module.hcloud_k3s.lb_ids.controller
+#   load_balancer_id = module.hcloud_k3s.lbs.controller.id
 #   protocol         = "tcp"
 #   listen_port      = 6443
 #   destination_port = 6443
