--- a/kube.tf.example
+++ b/kube.tf.example
@@ -41,12 +41,16 @@ module "hcloud_k3s" {
   cluster_user = "kube"
 
   # The above hcloud ssh key names for adding them when creating nodes.
-  my_ssh_key_names = [hcloud_ssh_key.default.name]
+  my_ssh_key_names   = [hcloud_ssh_key.default.name]
+  # Your required public ssh key for ssh access through all nodes.
+  my_public_ssh_keys = [hcloud_ssh_key.default.public_key]
   # Put your fixed public ip here, heavily recommended for protecting ssh and kube server api port access on bastion server, default to any.
   my_ip_addresses = ["0.0.0.0/0", "::/0"]
 
   # Use stable (production usage) or latest (staging usage).
   k3s_channel = "stable"
+  # Use specific version
+  # k3s_version = "v1.31.1+k3s1"
 
   # All advanced parameters for each kubelet, see https://kubernetes.io/docs/reference/command-line-tools-reference/kubelet/.
   kubelet_args = []
@@ -71,11 +75,11 @@ module "hcloud_k3s" {
 
   control_planes = {
     # Type "hcloud server-type list" for choose
-    server_type = "cx21"
+    server_type = "cx22"
     # Type "hcloud datacenter list" for choose
     location    = "nbg1"
-    # In hetzner, private_interface is the interface name for private network, ens10 is the default one for intel nics, enp7s0 for amd nics.
-    private_interface = "ens10"
+    # In hetzner, private_interface is the interface name for private network.
+    private_interface = "enp7s0"
     # The number of control planes. For HA with etcd, use an odd number, 1, 3, 5, etc. Note as the 1st control plane will be the default bastion server, and will be used as main entry for any SSH access to any nodes.
     count = 1
     labels = []
@@ -93,9 +97,9 @@ module "hcloud_k3s" {
     {
       # Will define the final hostname, aka <cluster_name>-worker-01, etc.
       name              = "worker"
-      server_type       = "cx21"
+      server_type       = "cx22"
       location          = "nbg1"
-      private_interface = "ens10"
+      private_interface = "enp7s0"
       # You can use next optional attribute to define the range private IP index for the nodepool. It allows to move items in the list without breaking the IP range.
       private_ip_index  = 0
       # The number of nodes in this pool. The main parameter for autoscaling.
@@ -109,9 +113,9 @@ module "hcloud_k3s" {
     {
       # Here is an example of a nodepool with a different server type, and a taint. Typically used for database oriented nodes.
       name              = "storage"
-      server_type       = "cx21"
+      server_type       = "cx22"
       location          = "nbg1"
-      private_interface = "ens10"
+      private_interface = "enp7s0"
       private_ip_index  = 1
       count             = 1
       labels = [
